[gd_scene load_steps=9 format=4 uid="uid://clqjl2b7rjc2y"]

[ext_resource type="Script" path="res://addons/AlephVault.WindRose/maps/map.gd" id="1_1843t"]
[ext_resource type="Script" path="res://addons/AlephVault.WindRose/maps/layers/floor_layer.gd" id="2_bmboe"]
[ext_resource type="TileSet" uid="uid://hpggwesrxskw" path="res://addons/AlephVault.WindRose/contrib/simple/samples/sample-aleph-vault-simple-isometric-dr-tileset.tres" id="3_0dfdl"]
[ext_resource type="Script" path="res://addons/AlephVault.WindRose/contrib/simple/entities_layer.gd" id="4_blvos"]
[ext_resource type="Script" path="res://addons/AlephVault.WindRose/contrib/simple/map_entity.gd" id="5_oyd6f"]
[ext_resource type="Texture2D" uid="uid://cuc7fkvuwjv2u" path="res://addons/AlephVault.WindRose/contrib/simple/samples/isometric-sprite.png" id="6_ppdqy"]
[ext_resource type="Script" path="res://addons/AlephVault.WindRose/contrib/simple/samples/sample-aleph-vault-simple-controller-a.gd" id="7_imh8k"]
[ext_resource type="Script" path="res://addons/AlephVault.WindRose/contrib/simple/samples/sample-aleph-vault-simple-controller-b.gd" id="8_rc8do"]

[node name="Sample" type="Node2D"]

[node name="Map11" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(100, 350)
script = ExtResource("1_1843t")
_size = Vector2i(16, 12)

[node name="FloorLayer" type="Node2D" parent="Map11"]
z_index = 10
position = Vector2(0, -8)
script = ExtResource("2_bmboe")

[node name="Floor" type="TileMapLayer" parent="Map11/FloorLayer"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAACAAAAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAwAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAA=")
tile_set = ExtResource("3_0dfdl")

[node name="Water" type="TileMapLayer" parent="Map11/FloorLayer"]
tile_map_data = PackedByteArray("AAAHAAYAAQACAAEAAAAHAAcAAQACAAEAAAAIAAYAAQACAAEAAAAIAAcAAQACAAEAAAAJAAYAAQACAAEAAAAJAAcAAQACAAEAAAAKAAYAAQACAAEAAAAKAAcAAQACAAEAAAALAAYAAQACAAEAAAALAAcAAQACAAEAAAAIAAUAAQACAAEAAAAJAAUAAQACAAEAAAAKAAUAAQACAAEAAAALAAUAAQACAAEAAAANAAMAAQACAAEAAAAMAAQAAQAAAAEAAAAIAAQAAQACAAAAAAAJAAQAAQACAAAAAAAKAAQAAQACAAAAAAALAAQAAQACAAAAAAAHAAQAAQABAAAAAAAHAAUAAQACAAMAAAAGAAUAAQAAAAIAAAAMAAIAAQABAAAAAAAMAAMAAQABAAEAAAANAAIAAQACAAAAAAAOAAIAAQADAAAAAAAOAAMAAQADAAEAAAAOAAQAAQADAAIAAAANAAQAAQACAAIAAAAMAAUAAQADAAEAAAAMAAYAAQADAAEAAAAMAAcAAQADAAEAAAAMAAgAAQADAAIAAAAHAAgAAQACAAIAAAAIAAgAAQACAAIAAAAJAAgAAQACAAIAAAAKAAgAAQACAAIAAAALAAgAAQACAAIAAAAGAAgAAQABAAIAAAAGAAYAAQABAAEAAAAGAAcAAQABAAEAAAAFAAUAAQACAAIAAAAEAAMAAQADAAMAAAAFAAMAAQACAAAAAAAGAAMAAQADAAAAAAAGAAQAAQADAAEAAAAEAAUAAQACAAIAAAADAAUAAQACAAIAAAACAAUAAQABAAIAAAACAAMAAQABAAEAAAACAAQAAQABAAEAAAACAAIAAQABAAAAAAADAAIAAQACAAAAAAAEAAIAAQADAAAAAAADAAMAAQACAAEAAAADAAQAAQACAAEAAAAEAAQAAQACAAEAAAAFAAQAAQACAAEAAAA=")
tile_set = ExtResource("3_0dfdl")

[node name="EntitiesLayer" type="Node2D" parent="Map11" node_paths=PackedStringArray("_down_linked", "_right_linked")]
script = ExtResource("4_blvos")
_down_linked = NodePath("../../Map21/EntitiesLayer")
_right_linked = NodePath("../../Map12/EntitiesLayer")

[node name="Map12" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(372, 214)
script = ExtResource("1_1843t")
_size = Vector2i(16, 12)

[node name="FloorLayer" type="Node2D" parent="Map12"]
z_index = 10
position = Vector2(0, -8)
script = ExtResource("2_bmboe")

[node name="Floor" type="TileMapLayer" parent="Map12/FloorLayer"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAACAAAAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAwAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAA=")
tile_set = ExtResource("3_0dfdl")

[node name="Water" type="TileMapLayer" parent="Map12/FloorLayer"]
tile_map_data = PackedByteArray("AAAHAAYAAQACAAEAAAAHAAcAAQACAAEAAAAIAAYAAQACAAEAAAAIAAcAAQACAAEAAAAJAAYAAQACAAEAAAAJAAcAAQACAAEAAAAKAAYAAQACAAEAAAAKAAcAAQACAAEAAAALAAYAAQACAAEAAAALAAcAAQACAAEAAAAIAAUAAQACAAEAAAAJAAUAAQACAAEAAAAKAAUAAQACAAEAAAALAAUAAQACAAEAAAANAAMAAQACAAEAAAAMAAQAAQAAAAEAAAAIAAQAAQACAAAAAAAJAAQAAQACAAAAAAAKAAQAAQACAAAAAAALAAQAAQACAAAAAAAHAAQAAQABAAAAAAAHAAUAAQACAAMAAAAGAAUAAQAAAAIAAAAMAAIAAQABAAAAAAAMAAMAAQABAAEAAAANAAIAAQACAAAAAAAOAAIAAQADAAAAAAAOAAMAAQADAAEAAAAOAAQAAQADAAIAAAANAAQAAQACAAIAAAAMAAUAAQADAAEAAAAMAAYAAQADAAEAAAAMAAcAAQADAAEAAAAMAAgAAQADAAIAAAAHAAgAAQACAAIAAAAIAAgAAQACAAIAAAAJAAgAAQACAAIAAAAKAAgAAQACAAIAAAALAAgAAQACAAIAAAAGAAgAAQABAAIAAAAGAAYAAQABAAEAAAAGAAcAAQABAAEAAAAFAAUAAQACAAIAAAAEAAMAAQADAAMAAAAFAAMAAQACAAAAAAAGAAMAAQADAAAAAAAGAAQAAQADAAEAAAAEAAUAAQACAAIAAAADAAUAAQACAAIAAAACAAUAAQABAAIAAAACAAMAAQABAAEAAAACAAQAAQABAAEAAAACAAIAAQABAAAAAAADAAIAAQACAAAAAAAEAAIAAQADAAAAAAADAAMAAQACAAEAAAADAAQAAQACAAEAAAAEAAQAAQACAAEAAAAFAAQAAQACAAEAAAA=")
tile_set = ExtResource("3_0dfdl")

[node name="EntitiesLayer" type="Node2D" parent="Map12" node_paths=PackedStringArray("_down_linked", "_left_linked")]
script = ExtResource("4_blvos")
_down_linked = NodePath("../../Map22/EntitiesLayer")
_left_linked = NodePath("../../Map11/EntitiesLayer")

[node name="Map21" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(308, 454)
script = ExtResource("1_1843t")
_size = Vector2i(16, 12)

[node name="FloorLayer" type="Node2D" parent="Map21"]
z_index = 10
position = Vector2(0, -8)
script = ExtResource("2_bmboe")

[node name="Floor" type="TileMapLayer" parent="Map21/FloorLayer"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAACAAAAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAwAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAA=")
tile_set = ExtResource("3_0dfdl")

[node name="Water" type="TileMapLayer" parent="Map21/FloorLayer"]
tile_map_data = PackedByteArray("AAAHAAYAAQACAAEAAAAHAAcAAQACAAEAAAAIAAYAAQACAAEAAAAIAAcAAQACAAEAAAAJAAYAAQACAAEAAAAJAAcAAQACAAEAAAAKAAYAAQACAAEAAAAKAAcAAQACAAEAAAALAAYAAQACAAEAAAALAAcAAQACAAEAAAAIAAUAAQACAAEAAAAJAAUAAQACAAEAAAAKAAUAAQACAAEAAAALAAUAAQACAAEAAAANAAMAAQACAAEAAAAMAAQAAQAAAAEAAAAIAAQAAQACAAAAAAAJAAQAAQACAAAAAAAKAAQAAQACAAAAAAALAAQAAQACAAAAAAAHAAQAAQABAAAAAAAHAAUAAQACAAMAAAAGAAUAAQAAAAIAAAAMAAIAAQABAAAAAAAMAAMAAQABAAEAAAANAAIAAQACAAAAAAAOAAIAAQADAAAAAAAOAAMAAQADAAEAAAAOAAQAAQADAAIAAAANAAQAAQACAAIAAAAMAAUAAQADAAEAAAAMAAYAAQADAAEAAAAMAAcAAQADAAEAAAAMAAgAAQADAAIAAAAHAAgAAQACAAIAAAAIAAgAAQACAAIAAAAJAAgAAQACAAIAAAAKAAgAAQACAAIAAAALAAgAAQACAAIAAAAGAAgAAQABAAIAAAAGAAYAAQABAAEAAAAGAAcAAQABAAEAAAAFAAUAAQACAAIAAAAEAAMAAQADAAMAAAAFAAMAAQACAAAAAAAGAAMAAQADAAAAAAAGAAQAAQADAAEAAAAEAAUAAQACAAIAAAADAAUAAQACAAIAAAACAAUAAQABAAIAAAACAAMAAQABAAEAAAACAAQAAQABAAEAAAACAAIAAQABAAAAAAADAAIAAQACAAAAAAAEAAIAAQADAAAAAAADAAMAAQACAAEAAAADAAQAAQACAAEAAAAEAAQAAQACAAEAAAAFAAQAAQACAAEAAAA=")
tile_set = ExtResource("3_0dfdl")

[node name="EntitiesLayer" type="Node2D" parent="Map21" node_paths=PackedStringArray("_up_linked", "_right_linked")]
script = ExtResource("4_blvos")
_up_linked = NodePath("../../Map11/EntitiesLayer")
_right_linked = NodePath("../../Map22/EntitiesLayer")

[node name="Map22" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(580, 318)
script = ExtResource("1_1843t")
_size = Vector2i(16, 12)

[node name="FloorLayer" type="Node2D" parent="Map22"]
z_index = 10
position = Vector2(0, -8)
script = ExtResource("2_bmboe")

[node name="Floor" type="TileMapLayer" parent="Map22/FloorLayer"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAACAAAAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAwAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAA=")
tile_set = ExtResource("3_0dfdl")

[node name="Water" type="TileMapLayer" parent="Map22/FloorLayer"]
tile_map_data = PackedByteArray("AAAHAAYAAQACAAEAAAAHAAcAAQACAAEAAAAIAAYAAQACAAEAAAAIAAcAAQACAAEAAAAJAAYAAQACAAEAAAAJAAcAAQACAAEAAAAKAAYAAQACAAEAAAAKAAcAAQACAAEAAAALAAYAAQACAAEAAAALAAcAAQACAAEAAAAIAAUAAQACAAEAAAAJAAUAAQACAAEAAAAKAAUAAQACAAEAAAALAAUAAQACAAEAAAANAAMAAQACAAEAAAAMAAQAAQAAAAEAAAAIAAQAAQACAAAAAAAJAAQAAQACAAAAAAAKAAQAAQACAAAAAAALAAQAAQACAAAAAAAHAAQAAQABAAAAAAAHAAUAAQACAAMAAAAGAAUAAQAAAAIAAAAMAAIAAQABAAAAAAAMAAMAAQABAAEAAAANAAIAAQACAAAAAAAOAAIAAQADAAAAAAAOAAMAAQADAAEAAAAOAAQAAQADAAIAAAANAAQAAQACAAIAAAAMAAUAAQADAAEAAAAMAAYAAQADAAEAAAAMAAcAAQADAAEAAAAMAAgAAQADAAIAAAAHAAgAAQACAAIAAAAIAAgAAQACAAIAAAAJAAgAAQACAAIAAAAKAAgAAQACAAIAAAALAAgAAQACAAIAAAAGAAgAAQABAAIAAAAGAAYAAQABAAEAAAAGAAcAAQABAAEAAAAFAAUAAQACAAIAAAAEAAMAAQADAAMAAAAFAAMAAQACAAAAAAAGAAMAAQADAAAAAAAGAAQAAQADAAEAAAAEAAUAAQACAAIAAAADAAUAAQACAAIAAAACAAUAAQABAAIAAAACAAMAAQABAAEAAAACAAQAAQABAAEAAAACAAIAAQABAAAAAAADAAIAAQACAAAAAAAEAAIAAQADAAAAAAADAAMAAQACAAEAAAADAAQAAQACAAEAAAAEAAQAAQACAAEAAAAFAAQAAQACAAEAAAA=")
tile_set = ExtResource("3_0dfdl")

[node name="EntitiesLayer" type="Node2D" parent="Map22" node_paths=PackedStringArray("_up_linked", "_left_linked")]
script = ExtResource("4_blvos")
_up_linked = NodePath("../../Map12/EntitiesLayer")
_left_linked = NodePath("../../Map21/EntitiesLayer")

[node name="Character11a" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_oyd6f")
speed = 32.0

[node name="Sprite11" type="Sprite2D" parent="Character11a"]
position = Vector2(0, 8)
texture = ExtResource("6_ppdqy")

[node name="Character12a" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_oyd6f")
_size = Vector2i(2, 1)
speed = 32.0

[node name="Sprite11" type="Sprite2D" parent="Character12a"]
position = Vector2(0, 8)
texture = ExtResource("6_ppdqy")

[node name="Sprite12" type="Sprite2D" parent="Character12a"]
position = Vector2(16, 16)
texture = ExtResource("6_ppdqy")

[node name="Character21a" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_oyd6f")
_size = Vector2i(1, 2)
speed = 32.0

[node name="Sprite11" type="Sprite2D" parent="Character21a"]
position = Vector2(0, 8)
texture = ExtResource("6_ppdqy")

[node name="Sprite21" type="Sprite2D" parent="Character21a"]
position = Vector2(-16, 16)
texture = ExtResource("6_ppdqy")

[node name="Character22a" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_oyd6f")
_size = Vector2i(2, 2)
speed = 32.0

[node name="Sprite11" type="Sprite2D" parent="Character22a"]
position = Vector2(0, 8)
texture = ExtResource("6_ppdqy")

[node name="Sprite12" type="Sprite2D" parent="Character22a"]
position = Vector2(16, 16)
texture = ExtResource("6_ppdqy")

[node name="Sprite21" type="Sprite2D" parent="Character22a"]
position = Vector2(-16, 16)
texture = ExtResource("6_ppdqy")

[node name="Sprite22" type="Sprite2D" parent="Character22a"]
position = Vector2(0, 24)
texture = ExtResource("6_ppdqy")

[node name="Character11b" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_oyd6f")
speed = 32.0

[node name="Sprite11" type="Sprite2D" parent="Character11b"]
position = Vector2(0, 8)
texture = ExtResource("6_ppdqy")

[node name="Character12b" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_oyd6f")
_size = Vector2i(2, 1)
speed = 32.0

[node name="Sprite11" type="Sprite2D" parent="Character12b"]
position = Vector2(0, 8)
texture = ExtResource("6_ppdqy")

[node name="Sprite12" type="Sprite2D" parent="Character12b"]
position = Vector2(16, 16)
texture = ExtResource("6_ppdqy")

[node name="Character21b" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_oyd6f")
_size = Vector2i(1, 2)
speed = 32.0

[node name="Sprite11" type="Sprite2D" parent="Character21b"]
position = Vector2(0, 8)
texture = ExtResource("6_ppdqy")

[node name="Sprite21" type="Sprite2D" parent="Character21b"]
position = Vector2(-16, 16)
texture = ExtResource("6_ppdqy")

[node name="Character22b" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_oyd6f")
_size = Vector2i(2, 2)
speed = 32.0

[node name="Sprite11" type="Sprite2D" parent="Character22b"]
position = Vector2(0, 8)
texture = ExtResource("6_ppdqy")

[node name="Sprite12" type="Sprite2D" parent="Character22b"]
position = Vector2(16, 16)
texture = ExtResource("6_ppdqy")

[node name="Sprite21" type="Sprite2D" parent="Character22b"]
position = Vector2(-16, 16)
texture = ExtResource("6_ppdqy")

[node name="Sprite22" type="Sprite2D" parent="Character22b"]
position = Vector2(0, 24)
texture = ExtResource("6_ppdqy")

[node name="ControllerA" type="Node2D" parent="."]
script = ExtResource("7_imh8k")

[node name="ControllerB" type="Node2D" parent="."]
script = ExtResource("8_rc8do")
